# wasm_safetics

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  MakeFile  ReadMe.md  build.sh  setup.sh  test.sh
include/: safetics.hpp
src/: CmakeLists.txt  main.cpp
src/motion/: motion.h
src/safetics/: eigen.cpp  safetics.cpp  sub.cpp
